# shaq_and_kobe_ws

./: .gitignore  Hello testtest.py  Karn.py  README.md  detect.py  detect_Video.py  fixreq.txt  hi.py  jod.txt  jod2.txt  r1.py  requirements.txt  setup_venv.sh  test.py  testroboflow2.py
firmware/: platformio.ini
firmware/another_program/: calibrateBNO.cpp  encoder.cpp  move_robot.cpp  shooter.cpp
firmware/config/: drive_output.h  drive_output_teensy.h  encoder_input.h  encoder_input_teensy.h  encoder_shooter_input.h
firmware/lib/PIDF/: PIDF.h
firmware/lib/motor/: default_motor.h  motor_interface.h
firmware/src/: drive_output.h  encoder_input.h  encoder_shooter.cpp  main.cpp
firmware/test/: encoder.cpp
firmware2/: CMakeLists.txt  platformio.ini
firmware2/src/: encoder.h  main.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/abu_core/share/abu_core/: package.bash  package.zsh
koby_hardware/another_program/: encoder_shooter.cpp
koby_hardware/lib/motor/: default_motor.h
koby_hardware/src/: base_move.cpp
log/: latest_build
mcu_hardware/koby_hardware/: platformio.ini
mcu_hardware/koby_hardware/config/: abu_base_move.h  config.h  move_shoot.h  nadeem_output.h  shooter_output.h
mcu_hardware/koby_hardware/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mcu_hardware/koby_hardware/lib/EvoDrive/: default_motor.h  motorevo.h
mcu_hardware/koby_hardware/lib/encoder/: encoder.h
mcu_hardware/koby_hardware/lib/imu/: imu_bno055.cpp
mcu_hardware/koby_hardware/lib/motor/: motor.h
mcu_hardware/koby_hardware/log/: latest_build
mcu_hardware/koby_hardware/src/: base_move.cpp  esp_imu.cpp  move.cpp  move_shoot.cpp  shooter.cpp  teensy_servo.cpp
mcu_hardware/koby_hardware/test/: base_move.cpp  jod.cpp  move.cpp  move_shoot_omni.cpp  nadeem.cpp  servo_test.cpp  teensy_imu.cpp
mcu_hardware/shaq_hardware/: platformio.ini
mcu_hardware/shaq_hardware/another_program/: base_move.cpp  move_robot.cpp  spintest.cpp
mcu_hardware/shaq_hardware/config/: encoder_shooter_input.h  shooter_output.h
mcu_hardware/shaq_hardware/lib/PIDF/: PIDF.cpp
mcu_hardware/shaq_hardware/lib/encoder/: encoder.h
mcu_hardware/shaq_hardware/lib/imu/: imu_bno055.cpp  imu_bno055.h
mcu_hardware/shaq_hardware/src/: base_move.cpp  esc_test.cpp  shooter.cpp  shooter_fixed.cpp
mcu_hardware/shaq_hardware/test/: base_move.cpp  esc_test.cpp  shooter.cpp
robot_ws/: 00-teensy.rules
robot_ws/install/: local_setup.sh  setup.sh
robot_ws/log/: latest_build
robot_ws/src/abu_core/: CMakeLists.txt  package.xml
robot_ws/src/abu_core/config/: motor_config.yaml
robot_ws/src/abu_core/launch/: bot_bringup.launch.py  joystickController.launch.py  keyboardController.launch.py  microros.launch.py
robot_ws/src/kobe_core/: CMakeLists.txt  package.xml
robot_ws/src/kobe_core/kept/: helloWorld.launch.py
robot_ws/src/kobe_core/launch/: bot_bringup.launch.py  joystickController.launch.py  microros.launch.py  test_bot_bringup.launch.py
robot_ws/src/kobe_core/scripts/: apriltag_auto_aim.py  cameracapture.py  cmd_move_omni.py  cmd_vel_auto_aim.py  cmd_vel_to_motor_speed.py  hoop_detection.py  joystick_control.py  joystickaing.py  slider.py
robot_ws/src/koby_core/: CMakeLists.txt  package.xml
robot_ws/src/shaq_core/: CMakeLists.txt  package.xml
robot_ws/src/shaq_core/kept/: apriltag_distance.py  encoder_graph.py  keyboardController.launch.py  refactor.py  scanner2.py  scanner3.py  test_sub_cmd_vel.py
robot_ws/src/shaq_core/launch/: bot_bringup.launch.py  helloWorld.launch.py  joystickController.launch.py  microros.launch.py  state.launch.py  test_bot_bringup.launch.py
robot_ws/src/shaq_core/scripts/: TestShooterSubCmdVel.py  apriltag_auto_aim.py  apriltag_distance.py  both_detect.py  cameracapture.py  cmd_koby_task.py  cmd_vel_auto_aim.py  cmd_vel_to_motor_speed.py  enconder_sub.py  hoop_detection.py  joystick_control.py  slider.py  test_sub_cmd_vel.py
robot_ws/src/shaq_core/src/: cameracapture.py  main_run.py
service/kobe/: kobe_autobringup.sh
service/kobejoy/: kobejoy.sh
service/shaq/: shaq_autobringup.sh
service/shaqjoy/: shaqjoy.sh
shaq_hardware/another_program/: encoder_imu.cpp
shaq_hardware/config/: drive_output.h
shaq_hardware/lib/PIDF/: PIDF.cpp
shaq_hardware/lib/imu/: imu_bno055.h
(+32 files in other folders)
